force-app/main/default/objects/Review_Request__c/Review_Request__c.object-meta.xml
<CustomObject>
    <label>Review Request</label>
    <nameField>
        <displayFormat>RRN-{00000000}</displayFormat>
        <label>Review Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>