force-app/main/default/objects/Review_Request__c/fields/Attempts__c.field-meta.xml
<CustomField>
  <fullName>Attempts__c</fullName>
  <label>Attempts</label>
  <type>Number</type>
  <precision>3</precision>
  <scale>0</scale>
  <defaultValue>0</defaultValue>
</CustomField>