force-app/main/default/objects/Review_Request__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Review Requests</relationshipLabel>
    <relationshipName>Business_Unit_Review_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>