force-app/main/default/objects/Review_Request__c/fields/First_Request__c.field-meta.xml
<CustomField>
  <fullName>First_Request__c</fullName>
  <label>First Request</label>
  <type>DateTime</type>
</CustomField>