force-app/main/default/objects/Review_Request__c/fields/Has_Left_Review__c.field-meta.xml
<CustomField>
    <fullName>Has_Left_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Left Review</label>
    <type>Checkbox</type>
</CustomField>