force-app/main/default/objects/Review_Request__c/fields/Last_Request__c.field-meta.xml
<CustomField>
  <fullName>Last_Request__c</fullName>
  <label>Last Request</label>
  <type>DateTime</type>
</CustomField>