force-app/main/default/objects/Review_Request__c/fields/Review_Date__c.field-meta.xml
<CustomField>
  <fullName>Review_Date__c</fullName>
  <label>Review Date</label>
  <type>DateTime</type>
</CustomField>