force-app/main/default/objects/Review_Request__c/fields/Review_Platform__c.field-meta.xml
<CustomField>
    <fullName>Review_Platform__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Platform</label>
    <referenceTo>Review_Platform__c</referenceTo>
    <relationshipLabel>Review Requests</relationshipLabel>
    <relationshipName>Review_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>