force-app/main/default/objects/Review_Request__c/fields/Service_Relationship__c.field-meta.xml
<CustomField>
  <fullName>Service_Relationship__c</fullName>
  <label>Service Relationship</label>
  <type>Lookup</type>
  <referenceTo>Service_Relationship__c</referenceTo>
  <relationshipLabel>Review Requests</relationshipLabel>
  <relationshipName>Review_Requests</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>